[workspace]
members = ["grammar"]
package.version = "0.1.0"
package.edition = "2024"

[package]
name = "tsukiyotake"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["latest_stable_rust"] }
lock_api = { version = "0.4.14", default-features = false }
tsukiyotake-grammar = { path = "grammar" }

[features]
std = ["tsukiyotake-grammar/std"]
