[workspace]
members = ["grammar", "cli"]
package.version = "0.1.0"
package.edition = "2024"

[package]
name = "tsukiyotake"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["latest_stable_rust"] }
hashbrown = { version = "0.16.1", features = ["allocator-api2", "nightly"] }
lccc-siphash = { git = "https://github.com/lccc-project/lccc-siphash.git", version = "0.1.0", features = [
    "random-state",
] }
lock_api = { version = "0.4.14", default-features = false }
tsukiyotake-grammar = { path = "grammar" }

[features]
std = ["tsukiyotake-grammar/std"]
