[package]
name = "tsukiyotake-grammar"
version.workspace = true
edition.workspace = true

[dependencies]
logos = { version = "0.15.1", default-features = false, features = [
    "export_derive",
    "logos-derive",
    # "debug",
] }

[dev-dependencies]
indoc = "2.0.7"

[features]
std = ["logos/std"]
